--- a/task37/style.css
+++ b/task37/style.css
@@ -38,18 +38,20 @@ button:hover{
 	height: 100%;
 }
 .dialog{
+	user-select: none;
+	-webkit-user-select: none;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	width: 400px;
+	min-width: 300px;
 	height: 300px;
+	min-height: 200px;
 	transform: translate(-50%, -50%);
 	background-color: white;
 	border-radius: 5px;
 }
 .dialog .header{
-	user-select: none;
-	-webkit-user-select: none;
 	width: 100%;
 	height: 60px;
 	line-height: 60px;
@@ -65,10 +67,20 @@ button:hover{
 	padding: 20px;
 }
 .dialog .footer{
-	margin: 10px 20px;
+	margin: 20px;
 	position: absolute;
 	bottom: 0;
 	right: 0;
+}
+.dialog .resize{
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	width: 8px;
+	height: 8px;
+	border-left: 2px solid grey;
+	transform: rotate(45deg);
+	cursor: se-resize;
 }
 .hide{
 	display: none;
