--- a/2016/task42/style.css
+++ b/2016/task42/style.css
@@ -75,7 +75,7 @@ ul li{
 	border-radius: 5px;
 }
 ul li:hover{
-	background-color: purple;
+	background-color: plum;
 	color: white;
 }
 .calendar .day{
